--- a/apps/bankfrontend/package.json
+++ b/apps/bankfrontend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev --turbo -p 3001",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 3001",
     "lint": "next lint"
   },
   "dependencies": {
