--- a/apps/user-app/package.json
+++ b/apps/user-app/package.json
@@ -28,6 +28,7 @@
     "react-dom": "18.3.1",
     "react-hook-form": "^7.53.0",
     "recoil": "^0.7.7",
+    "recoil-persist": "^5.1.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
