--- a/packages/store/package.json
+++ b/packages/store/package.json
@@ -10,9 +10,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "recoil": "^0.7.7"
+    "recoil": "^0.7.7",
+    "recoil-persist": "^5.1.0"
   },
-  "exports" : {
-    "./atom" : "./src/atom.ts"
+  "exports": {
+    "./atom": "./src/atom.ts"
   }
 }
