--- a/apps/user-app/package.json
+++ b/apps/user-app/package.json
@@ -20,6 +20,7 @@
     "@types/recoil": "^0.0.1",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
+    "input-otp": "^1.4.1",
     "jsonwebtoken": "^9.0.2",
     "next": "^14.2.13",
     "next-auth": "^4.24.7",
