--- a/apps/user-app/package.json
+++ b/apps/user-app/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@edgestore/react": "^0.2.2",
+    "@edgestore/server": "^0.2.2",
     "@hookform/resolvers": "^3.9.0",
     "@paytm-repo/db": "*",
     "@paytm-repo/store": "*",
